# machinelearning-playground

./: .gitignore  README.md  sk-learn-intro.ipynb
.devcontainer/: devcontainer.json
ai/langchain-app/: Dockerfile  README.md  main.py  pyproject.toml
ai/langchain-app/frontend/: App.vue  index.html
ai/transformers-experiments/: README.md  main.py  pyproject.toml
cuda/: README.md  helloworld.cu
datascience/: NumPy.ipynb  Pandas - Series and Dataframes.ipynb  ipython.ipynb  jupyter.ipynb  myscript.py  pandas.ipynb
machine-learning/: Overview.ipynb  scikit-learn.ipynb
machine-learning/keras/: conv.ipynb  misc.ipynb  simple.ipynb
machine-learning/nn/: neural_networks.ipynb  nn-hidden-layer-weights-2.html  source.graffle
machine-learning/tensorflow/: README.md  tensorflow_intro.ipynb  tensorflow_linear_regression.ipynb  tensorflow_misc.ipynb
